--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
@@ -6,6 +5,7 @@
         "test": "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
     },
     "dependencies": {
+        "@solana/actions": "^1.1.1",
         "@solana/web3.js": "^1.93.4"
     },
     "devDependencies": {
